--- a/framework_style.css
+++ b/framework_style.css
@@ -92,8 +92,8 @@
     width:100%;
   }
 }
-@media only screen and (max-width: 576px){
+/*@media only screen and (max-width: 576px){
   #div4{
     width:100%;
   }
-}
+}*/
